# ditto-llm

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  CATALOG_COMPLETENESS.md  CHANGELOG.md  COMPARED_TO_LITELLM_AI_SDK.md  Cargo.toml  Dockerfile  PROVIDERS.md  README.md  TODO.md  llms.txt  package.json  pnpm-lock.yaml  todo.md
.cargo/: audit.toml
crates/ditto-core/: AGENT.md  Cargo.toml
crates/ditto-core/examples/: anthropic_messages.rs  basic.rs  batches.rs  cache_bench_deepseek_direct.rs  embeddings.rs  local_native_formats.rs  multimodal.rs  openai_compatible.rs  openai_compatible_embeddings.rs  streaming.rs  tool_calling.rs
crates/ditto-core/i18n/: en_US.json  ja_JP.json  zh_CN.json
crates/ditto-core/src/: error.rs  lib.rs  resources.rs
crates/ditto-core/src/agent/: mod.rs  tool_loop.rs  toolbox.rs  types.rs
crates/ditto-core/src/agent/toolbox/: safe_fs.rs  safe_shell.rs  tools.rs
crates/ditto-core/src/auth/: mod.rs  oauth.rs  sigv4.rs
crates/ditto-core/src/capabilities/: audio.rs  batch.rs  embedding.rs  file.rs  image.rs  image_edit.rs  moderation.rs  realtime.rs  rerank.rs  text.rs  video.rs
crates/ditto-core/src/catalog/: mod.rs  provider_runtime.rs  reference_schema.rs
crates/ditto-core/src/catalog/builtin/: google.rs  mod.rs  openai.rs  openai_compatible.rs
crates/ditto-core/src/config/: auth.rs  env.rs  mod.rs  provider_config.rs  routing_policy.rs
crates/ditto-core/src/contracts/: endpoint.rs  guard.rs  ids.rs  llm.rs  mod.rs  routing.rs  tool_call.rs
crates/ditto-core/src/foundation/: mod.rs
crates/ditto-core/src/llm_core/: layer.rs  mod.rs  model.rs  stream.rs
crates/ditto-core/src/object/: core.rs  handle.rs  json.rs  tests.rs
crates/ditto-core/src/provider_options/: core.rs  envelope.rs  mod.rs  request.rs  support.rs
crates/ditto-core/src/provider_transport/: config.rs  http.rs  mod.rs  policy.rs
crates/ditto-core/src/providers/: anthropic.rs  bedrock.rs  cohere.rs  genai.rs  google.rs  mod.rs  model_resolution.rs  openai_audio_common.rs  openai_batches_common.rs  openai_chat_completions_core.rs  openai_compat_profile.rs  openai_compatible_audio.rs  openai_compatible_batches.rs  openai_compatible_images.rs  openai_compatible_moderations.rs  openai_embeddings_common.rs  openai_images_common.rs  openai_like.rs  openai_moderations_common.rs  openai_videos_common.rs  vertex.rs
crates/ditto-core/src/providers/anthropic/: client.rs  messages_api.rs  tests.rs
crates/ditto-core/src/providers/bedrock/: client.rs  eventstream.rs  messages_api.rs  tests.rs
crates/ditto-core/src/providers/cohere/: chat_api.rs  client.rs  embeddings.rs  rerank.rs  tests.rs
crates/ditto-core/src/providers/google/: client.rs  embeddings.rs  generate_api.rs  images.rs  realtime.rs  tests.rs  videos.rs
crates/ditto-core/src/providers/openai/: audio_speech.rs  audio_transcriptions.rs  audio_translations.rs  batches.rs  chat_completions.rs  client.rs  completions_legacy.rs  embeddings.rs  files.rs  images_edits.rs  images_generations.rs  mod.rs  models.rs  moderations.rs  raw_responses.rs  realtime.rs  responses.rs  text.rs  videos.rs
crates/ditto-core/src/providers/openai_compatible/: capabilities.rs  chat_completions.rs  client.rs  files.rs  provider_options_schema.rs
crates/ditto-core/src/runtime/: builder_backends.rs  builder_protocol.rs  builtin.rs  explain.rs  mod.rs  model_builders.rs  resolver.rs  route.rs  route_endpoint.rs  route_selection.rs  shell_exec.rs  toolbox.rs  transport.rs
crates/ditto-core/src/runtime/toolbox/: fs_tools.rs  safe_fs.rs  tools.rs
crates/ditto-core/src/runtime_registry/: catalog.rs  mod.rs  queries.rs  semantics.rs  snapshot.rs
crates/ditto-core/src/sdk/: cache.rs  devtools.rs  http.rs  protocol.rs  telemetry.rs
crates/ditto-core/src/sdk/http/: stream_v1.rs  stream_v1_tests.rs  ui_message_stream_v1.rs  ui_message_stream_v1_tests.rs
crates/ditto-core/src/session_transport/: mod.rs  policy.rs  sse.rs  streaming.rs
crates/ditto-core/src/types/: audio.rs  image.rs  mod.rs  moderation.rs  video.rs
crates/ditto-core/src/utils/: json_schema.rs  mod.rs  params.rs
crates/ditto-core/tests/: agent_loop.rs  agent_toolbox.rs  auth_oauth.rs  auth_sigv4.rs  catalog_resolver_contract.rs  default_core_contract.rs  google_stream_empty_response_fallback.rs  google_stream_http_header_auth.rs  integration_smoke.rs  runtime_explain_contract.rs  runtime_registry_contract.rs  runtime_route_contract.rs  runtime_transport_contract.rs  transport_policy_contract.rs  vertex_generate.rs  vertex_stream.rs
crates/ditto-server/: Cargo.toml
crates/ditto-server/src/: audit_integrity.rs  config_editing.rs  data_root.rs  lib.rs
crates/ditto-server/src/gateway/: cache.rs  config.rs  guardrails.rs  http.rs  http_backend.rs  interop.rs  limits.rs  litellm_config.rs  mod.rs  observability.rs  passthrough.rs  postgres_store.rs  proxy_backend.rs  redaction.rs  responses_shim.rs  sqlite_store.rs  token_count.rs
crates/ditto-server/tests/: anthropic_provider_capabilities.rs  config_editing_contract.rs  config_interactive.rs  deepseek_provider_capabilities.rs  gateway_alt_protocols.rs  gateway_contract_v0_1.rs  gateway_control_plane.rs  gateway_costing.rs  gateway_google_genai_stream.rs  gateway_http.rs  gateway_mcp.rs  gateway_openai_proxy.rs  gateway_prometheus_metrics.rs  gateway_responses_shim.rs  gateway_sqlite_persistence.rs  gateway_state_file.rs  gateway_translation_custom_provider_resolution.rs  gateway_translation_files.rs  gateway_translation_provider_aliases.rs  gateway_translation_stream_options.rs  google_provider_capabilities.rs  mcp_streamable_http_support.rs  minimax_provider_capabilities.rs  module_namespace_contract.rs  openai_provider_capabilities.rs
crates/ditto-server/tests/gateway_openai_proxy/: auth_headers.rs  basic_proxying.rs  basic_proxying_litellm_aliases.rs  mcp.rs  mcp_multi_step.rs  mcp_tools_cache.rs  model_map.rs  models.rs  proxy_cache.rs  request_dedup.rs  routing.rs  validation.rs  validation_litellm_aliases.rs
crates/ditto-server/tests/gateway_translation/: support.rs  tests.rs
docs/: README.md  (+2 more)
(+726 files in other folders)
