[workspace]
members = [
  ".",
  "crates/ditto-core",
  "crates/ditto-server",
  "crates/ditto-gateway-contract-guard",
  "crates/ditto-gateway-contract-types",
]
resolver = "2"

[package]
name = "ditto-llm"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
autobins = false
autotests = false

[features]
default = ["provider-openai-compatible", "cap-llm"]

agent = ["ditto_core/agent"]
auth = ["ditto_core/auth"]
sdk = ["ditto_core/sdk"]
sdk-axum = ["ditto_core/sdk-axum"]
base64 = ["dep:base64", "ditto_core/base64"]

# Internal protocol/provider implementation toggles retained for cfg compatibility.
openai = ["ditto_core/openai"]
anthropic = ["ditto_core/anthropic"]
google = ["ditto_core/google"]
openai-compatible = ["ditto_core/openai-compatible"]
cohere = ["ditto_core/cohere"]
bedrock = ["ditto_core/bedrock"]
vertex = ["ditto_core/vertex"]

# Public provider packs.
provider-openai-compatible = ["ditto_core/provider-openai-compatible"]
provider-openai = ["ditto_core/provider-openai"]
provider-anthropic = ["ditto_core/provider-anthropic"]
provider-google = ["ditto_core/provider-google"]
provider-cohere = ["ditto_core/provider-cohere"]
provider-bedrock = ["ditto_core/provider-bedrock"]
provider-vertex = ["ditto_core/provider-vertex"]
provider-bailian = ["ditto_core/provider-bailian"]
provider-deepseek = ["ditto_core/provider-deepseek"]
provider-doubao = ["ditto_core/provider-doubao"]
provider-hunyuan = ["ditto_core/provider-hunyuan"]
provider-kimi = ["ditto_core/provider-kimi"]
provider-minimax = ["ditto_core/provider-minimax"]
provider-openrouter = ["ditto_core/provider-openrouter"]
provider-qianfan = ["ditto_core/provider-qianfan"]
provider-xai = ["ditto_core/provider-xai"]
provider-zhipu = ["ditto_core/provider-zhipu"]

# Internal capability toggles retained for cfg compatibility.
streaming = ["ditto_core/streaming"]
tools = ["ditto_core/tools"]
embeddings = ["ditto_core/embeddings"]
images = ["ditto_core/images"]
videos = ["ditto_core/videos"]
audio = ["ditto_core/audio"]
moderations = ["ditto_core/moderations"]
rerank = ["ditto_core/rerank"]
batches = ["ditto_core/batches"]
realtime = ["ditto_core/realtime"]

# Public capability packs.
cap-llm = ["ditto_core/cap-llm"]
cap-embedding = ["ditto_core/cap-embedding"]
cap-image-generation = ["ditto_core/cap-image-generation"]
cap-image-edit = ["ditto_core/cap-image-edit"]
cap-audio-transcription = ["ditto_core/cap-audio-transcription"]
cap-audio-speech = ["ditto_core/cap-audio-speech"]
cap-moderation = ["ditto_core/cap-moderation"]
cap-rerank = ["ditto_core/cap-rerank"]
cap-batch = ["ditto_core/cap-batch"]
cap-realtime = ["ditto_core/cap-realtime"]

# Bundles.
all-providers = ["ditto_core/all-providers"]
all-capabilities = ["ditto_core/all-capabilities"]
all = ["ditto_core/all"]

integration = ["ditto_core/integration"]

[dependencies]
ditto_core = { package = "ditto-core", path = "crates/ditto-core", default-features = false }
async-trait = "0.1"
base64 = { version = "0.22", optional = true }
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "net", "sync", "time"] }

[dev-dependencies]
ditto-gateway-contract-types = { path = "crates/ditto-gateway-contract-types" }
httpmock = "0.8.2"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "ditto-catalog-dashboard"
path = "src/bin/ditto-catalog-dashboard.rs"

[[bin]]
name = "ditto-llms-txt"
path = "src/bin/ditto-llms-txt.rs"

[[test]]
name = "default_core_contract"
path = "tests/default_core_contract.rs"

[[test]]
name = "catalog_resolver_contract"
path = "tests/catalog_resolver_contract.rs"

[[test]]
name = "runtime_explain_contract"
path = "tests/runtime_explain_contract.rs"

[[test]]
name = "runtime_registry_contract"
path = "tests/runtime_registry_contract.rs"

[[test]]
name = "runtime_route_contract"
path = "tests/runtime_route_contract.rs"

[[test]]
name = "runtime_transport_contract"
path = "tests/runtime_transport_contract.rs"

[[test]]
name = "transport_policy_contract"
path = "tests/transport_policy_contract.rs"

[[test]]
name = "integration_smoke"
path = "tests/integration_smoke.rs"

[[example]]
name = "anthropic_messages"
required-features = ["provider-anthropic", "cap-llm"]

[[example]]
name = "batches"
required-features = ["provider-openai-compatible", "cap-batch"]

[[example]]
name = "cache_bench_deepseek_direct"
required-features = ["provider-openai-compatible", "cap-llm"]

[[example]]
name = "basic"
required-features = ["provider-openai-compatible", "cap-llm"]

[[example]]
name = "embeddings"
required-features = ["provider-openai", "cap-embedding"]

[[example]]
name = "local_native_formats"
required-features = ["provider-anthropic", "cap-llm"]

[[example]]
name = "multimodal"
required-features = ["provider-openai", "cap-llm", "base64"]

[[example]]
name = "openai_compatible"
required-features = ["provider-openai-compatible", "cap-llm"]

[[example]]
name = "openai_compatible_embeddings"
required-features = ["provider-openai-compatible", "cap-embedding"]

[[example]]
name = "streaming"
required-features = ["provider-openai-compatible", "cap-llm"]

[[example]]
name = "tool_calling"
required-features = ["provider-openai-compatible", "cap-llm"]
