[workspace]
members = [
  "crates/ditto-core",
  "crates/ditto-server",
]
default-members = [
  "crates/ditto-core",
  "crates/ditto-server",
]
resolver = "2"

[patch."https://github.com/omne42/omne-runtime.git"]
omne-fs-primitives = { path = "../omne-runtime/crates/omne-fs-primitives" }
omne-process-primitives = { path = "../omne-runtime/crates/omne-process-primitives" }
