[package]
name = "ditto-core"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
autoexamples = false
autobins = false

[features]
default = ["provider-openai-compatible", "cap-llm"]

agent = ["dep:regex", "dep:omne-fs"]
contract-guard = ["dep:regex", "dep:serde_yaml"]
auth = ["dep:hmac", "dep:sha2", "dep:time"]
sdk = []
sdk-axum = ["sdk", "dep:axum"]
base64 = ["dep:base64"]
gateway = []

# Legacy compatibility aliases.
openai-compatible = ["provider-openai-compatible"]
openai = ["provider-openai"]
anthropic = ["provider-anthropic"]
google = ["provider-google"]
cohere = ["provider-cohere"]
bedrock = ["provider-bedrock"]
vertex = ["provider-vertex"]
streaming = ["cap-llm-streaming"]
tools = ["cap-llm-tools"]
embeddings = ["cap-embedding"]
images = ["cap-image-generation", "cap-image-edit"]
videos = ["cap-video-generation"]
audio = ["cap-audio-transcription", "cap-audio-speech"]
moderations = ["cap-moderation"]
rerank = ["cap-rerank"]
batches = ["cap-batch"]
realtime = ["cap-realtime"]

# Providers.
provider-openai-compatible = []
provider-openai = []
provider-anthropic = []
provider-google = []
provider-cohere = []
provider-bedrock = ["auth", "base64"]
provider-vertex = ["auth"]
provider-bailian = []
provider-deepseek = ["provider-openai-compatible"]
provider-doubao = []
provider-hunyuan = []
provider-kimi = ["provider-openai-compatible"]
provider-minimax = []
provider-openrouter = ["provider-openai-compatible"]
provider-qianfan = []
provider-xai = ["provider-openai-compatible"]
provider-zhipu = []

# Capabilities.
cap-llm-streaming = []
cap-llm-tools = []
cap-llm = ["cap-llm-streaming", "cap-llm-tools"]
cap-embedding = []
cap-image-generation = []
cap-image-edit = []
cap-audio-transcription = []
cap-audio-speech = []
cap-moderation = []
cap-rerank = []
cap-batch = []
cap-realtime = []
cap-video-generation = ["dep:base64"]

# Bundles.
all-providers = ["provider-openai-compatible", "provider-openai", "provider-anthropic", "provider-google", "provider-cohere", "provider-bedrock", "provider-vertex", "provider-bailian", "provider-deepseek", "provider-doubao", "provider-hunyuan", "provider-kimi", "provider-minimax", "provider-openrouter", "provider-qianfan", "provider-xai", "provider-zhipu"]
all-capabilities = ["cap-llm", "cap-embedding", "cap-image-generation", "cap-image-edit", "cap-audio-transcription", "cap-audio-speech", "cap-moderation", "cap-rerank", "cap-batch", "cap-realtime", "cap-video-generation"]
all = ["all-providers", "all-capabilities"]

integration = []

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", optional = true, features = ["json"] }
base64 = { version = "0.22", optional = true }
bytes = "1"
config-kit = { path = "../../../omne_foundation/crates/config-kit" }
futures-util = "0.3"
hmac = { version = "0.12", optional = true }
error-kit = { path = "../../../omne_foundation/crates/error-kit" }
i18n-kit = { path = "../../../omne_foundation/crates/i18n-kit" }
i18n-runtime-kit = { path = "../../../omne_foundation/crates/i18n-runtime-kit" }
policy-meta = { path = "../../../omne_foundation/crates/policy-meta" }
secret-kit = { path = "../../../omne_foundation/crates/secret-kit" }
structured-text-kit = { path = "../../../omne_foundation/crates/structured-text-kit" }
text-assets-kit = { path = "../../../omne_foundation/crates/text-assets-kit" }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
regex = { version = "1", optional = true }
omne-fs = { path = "../../../omne-runtime/crates/omne-fs", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"], optional = true }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"

[dev-dependencies]
httpmock = "0.8.2"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "ditto-catalog-dashboard"
path = "src/bin/ditto-catalog-dashboard.rs"

[[bin]]
name = "ditto-gateway-contract-guard"
path = "src/bin/ditto-gateway-contract-guard.rs"
required-features = ["contract-guard"]

[[bin]]
name = "ditto-llms-txt"
path = "src/bin/ditto-llms-txt.rs"

[[example]]
name = "anthropic_messages"
path = "examples/anthropic_messages.rs"
required-features = ["provider-anthropic", "cap-llm"]

[[example]]
name = "batches"
path = "examples/batches.rs"
required-features = ["provider-openai-compatible", "cap-batch"]

[[example]]
name = "cache_bench_deepseek_direct"
path = "examples/cache_bench_deepseek_direct.rs"
required-features = ["provider-openai-compatible", "cap-llm"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["provider-openai-compatible", "cap-llm"]

[[example]]
name = "embeddings"
path = "examples/embeddings.rs"
required-features = ["provider-openai", "cap-embedding"]

[[example]]
name = "local_native_formats"
path = "examples/local_native_formats.rs"
required-features = ["provider-anthropic", "cap-llm"]

[[example]]
name = "multimodal"
path = "examples/multimodal.rs"
required-features = ["provider-openai", "cap-llm", "base64"]

[[example]]
name = "openai_compatible"
path = "examples/openai_compatible.rs"
required-features = ["provider-openai-compatible", "cap-llm"]

[[example]]
name = "openai_compatible_embeddings"
path = "examples/openai_compatible_embeddings.rs"
required-features = ["provider-openai-compatible", "cap-embedding"]

[[example]]
name = "streaming"
path = "examples/streaming.rs"
required-features = ["provider-openai-compatible", "cap-llm"]

[[example]]
name = "tool_calling"
path = "examples/tool_calling.rs"
required-features = ["provider-openai-compatible", "cap-llm"]
